--- a/src/Home.css
+++ b/src/Home.css
@@ -1,6 +1,6 @@
 h1 {
-  font-size: 90px;
-  font-family: var(--primary-font-family);
+  font-size: 90px !important;
+  font-family: var(--primary-font-family) !important;
 }
 
 .hero {
@@ -13,15 +13,15 @@ h1 {
   font-size: 36px;
   font-weight: 700;
   margin: 0;
-  font-family: var(--secondary-font-family);
+  font-family: var(--secondary-font-family) !important;
 }
 
 .hero h2 {
   line-height: 2;
   font-size: 24px;
   font-weight: 400;
-  font-family: var(--secondary-font-family);
-  color: var(--primary-font-family);
+  font-family: var(--secondary-font-family) !important;
+  color: var(--primary-font-family) !important;
 }
 
 .content {
