--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -3,20 +3,41 @@
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
+  height: 400px !important;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .card:hover {
   transform: scale(1.05);
 }
 
-.card-image {
+.card-img {
   width: 100%;
-  height: 60%;
+  height: 60% !important;
   object-fit: cover;
 }
 
 .card-content {
   padding: 1rem;
+}
+
+.card-title,
+.card-text {
+  margin: 0.5rem 0;
+}
+
+.card-text {
+  color: #d9d9d9 !important;
+}
+
+.card-body {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 40% !important;
 }
 
 .card-overlay {
